발사 수정중

--- a/ADR/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ADR/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -157,6 +157,11 @@ WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
 WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Fire.IA_Fire
 InputAction=
+CameraComponent=CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Rendering Features|Motion Blur,CameraComponent.PostProcess.Rendering Features|Ambient Occlusion,CameraComponent.PostProcess.Rendering Features|Ambient OcclusionAdvanced,CameraComponent.PostProcess.Rendering Features|Ray Tracing Ambient Occlusion,CameraComponent.PostProcess.Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global IlluminationAdvanced,CameraComponent.PostProcess.Path Tracing,CameraComponent.PostProcess.Path Tracing|Lighting Components,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens|Depth of Field,CameraComponent.PostProcess.Lens|Mobile Depth of Field,CameraComponent.PostProcess.Lens|Mobile Depth of FieldAdvanced,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Color Grading|Temperature,CameraComponent.PostProcess.Color Grading|Global,CameraComponent.PostProcess.Color Grading|Shadows,CameraComponent.PostProcess.Color Grading|Midtones,CameraComponent.PostProcess.Color Grading|Misc,CameraComponent.PostProcess.Color Grading|Highlights
+SkeletalMeshComponent=SkeletalMeshComponent.Materials.MaterialList
+BP_ThirdPersonCharacter_C=SkeletalMeshComponent.Materials.MaterialList
+K2Node=SkeletalMeshComponent.Materials.MaterialList
+K2Node_VariableGet=SkeletalMeshComponent.Materials.MaterialList
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Blueprints
@@ -300,7 +305,7 @@ MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
-CameraComponent="\"Object\" "
+CameraComponent="\"Object\" \"Object.PostProcess.PostProcessSettings\" "
 SpringArmComponent="\"Object\" "
 InputAction="\"Object\" "
 DataAsset="\"Object\" "
@@ -314,6 +319,17 @@ SkeletalMesh="\"Object\" "
 SkinnedAsset="\"Object\" "
 StreamableRenderAsset="\"Object\" "
 LODInfoUILayout="\"Object\" "
+BP_ThirdPersonCharacter_C=
+Character=
+Pawn=
+PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+BrushComponent="\"Object\" "
+CharacterMovementComponent="\"Object\" \"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
+PawnMovementComponent="\"Object\" \"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
+NavMovementComponent="\"Object\" \"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
+MovementComponent="\"Object\" \"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
 
 [DetailCategories]
 WorldPartitionRuntimeSpatialHash.RuntimeSettings=True
@@ -772,12 +788,53 @@ SkeletalMeshComponent.Activation=True
 SkeletalMeshComponent.Cooking=True
 SkeletalMeshComponent.Events=True
 SkeletalMeshComponent.Materials=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableGet.Events=True
+BP_ThirdPersonCharacter_C.SkeletalMesh=True
+CameraComponent.AssetUserData=True
+CameraComponent.Physics=True
+CameraComponent.Replication=True
+CameraComponent.Collision=True
+SkeletalMeshComponent.SkeletalMesh=True
+SkeletalMeshComponent.Optimization=True
+SkeletalMeshComponent.LOD=True
+SkeletalMeshComponent.TextureStreaming=True
+SkeletalMeshComponent.RayTracing=True
+CharacterMovementComponent.Variable=True
+CharacterMovementComponent.Sockets=True
+CharacterMovementComponent.Character Movement (General Settings)=True
+CharacterMovementComponent.Character Movement: Walking=True
+CharacterMovementComponent.Character Movement: Jumping / Falling=True
+CharacterMovementComponent.ComponentTick=True
+CharacterMovementComponent.Character Movement (Networking)=True
+CharacterMovementComponent.Character Movement: Swimming=True
+CharacterMovementComponent.Character Movement: Flying=True
+CharacterMovementComponent.Character Movement: Custom Movement=True
+CharacterMovementComponent.Character Movement (Rotation Settings)=True
+CharacterMovementComponent.Character Movement: Physics Interaction=True
+CharacterMovementComponent.Character Movement=True
+CharacterMovementComponent.Character Movement: Avoidance=True
+CharacterMovementComponent.RootMotion=True
+CharacterMovementComponent.Character Movement: NavMesh Movement=True
+CharacterMovementComponent.NavMovement=True
+CharacterMovementComponent.Velocity=True
+CharacterMovementComponent.PlanarMovement=True
+CharacterMovementComponent.MovementComponent=True
+CharacterMovementComponent.Tags=True
+CharacterMovementComponent.ComponentReplication=True
+CharacterMovementComponent.Activation=True
+CharacterMovementComponent.Cooking=True
+CharacterMovementComponent.Events=True
+CharacterMovementComponent.Replication=True
+CharacterMovementComponent.Collision=True
 
 [DetailMultiObjectNodeExpansion]
 GameMapsSettings=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
