--- a/ADR/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ADR/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -193,7 +193,7 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.PostProcess.PostProcessSettings\" "
 GameMapsSettings="\"Object\" "
 MoviePlayerSettings="\"Object\" "
 GeneralProjectSettings="\"Object\" "
@@ -303,8 +303,8 @@ SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
-SceneComponent="\"Object\" "
-ActorComponent="\"Object\" "
+SceneComponent="\"Object\" \"Object.PostProcess.PostProcessSettings\" "
+ActorComponent="\"Object\" \"Object.PostProcess.PostProcessSettings\" "
 CameraComponent="\"Object\" \"Object.PostProcess.PostProcessSettings\" "
 SpringArmComponent="\"Object\" "
 InputAction="\"Object\" "
@@ -2031,9 +2031,9 @@ bUseTreeViewForAnimationCurves=False
 AnimationCurveGroupingDelimiters="._/|\\"
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem1=/Game/SciFiCharacter/Meshes/SK_SciFiCharacter
-MRUItem2=/Game/ThirdPerson/Input/IMC_Default
+MRUItem0=/Game/ThirdPerson/Input/IMC_Default
+MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem2=/Game/SciFiCharacter/Meshes/SK_SciFiCharacter
 MRUItem3=/Game/ThirdPerson/Input/Actions/IA_Fire
 
 [AssetEditorToolkitTabLocation]
