일단 걷기까지 넣고있는 중

--- a/ADR/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ADR/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -365,9 +365,15 @@ AnimGraphNode_StateMachine="\"Object\" "
 AnimGraphNode_StateMachineBase="\"Object\" "
 AnimGraphNode_Base="\"Object\" "
 K2Node="\"Object\" "
-EdGraphNode="\"Object\" "
+EdGraphNode="\"Object\" \"Object.Events.TransitionInterrupt\" "
 AnimStateNode="\"Object\" "
-AnimStateNodeBase="\"Object\" "
+AnimStateNodeBase="\"Object\" \"Object.Events.TransitionInterrupt\" "
+UE4_Mannequin_Skeleton_AnimBlueprint1_C="\"Object\" "
+AnimGraphNode_Root="\"Object\" "
+AnimationGraph="\"Object\" "
+EdGraph="\"Object\" "
+UE4_Mannequin_Skeleton_AnimBlueprint2_C="\"Object\" "
+AnimStateTransitionNode="\"Object\" \"Object.Events.TransitionInterrupt\" "
 
 [DetailCategories]
 WorldPartitionRuntimeSpatialHash.RuntimeSettings=True
@@ -927,12 +933,32 @@ AnimGraphNode_StateMachine.Functions=True
 AnimGraphNode_StateMachine.Tag=True
 AnimStateNode.GraphNodeDetail=True
 AnimStateNode.Animation State=True
+UE4_Mannequin_Skeleton_AnimBlueprint1_C.RootMotion=True
+UE4_Mannequin_Skeleton_AnimBlueprint1_C.Notifies=True
+UE4_Mannequin_Skeleton_AnimBlueprint1_C.Montage=True
+AnimGraphNode_Root.Functions=True
+AnimGraphNode_Root.Tag=True
+AnimationGraph.Inputs=True
+AnimationGraph.GraphBlending=True
+UE4_Mannequin_Skeleton_AnimBlueprint2_C.RootMotion=True
+UE4_Mannequin_Skeleton_AnimBlueprint2_C.Notifies=True
+UE4_Mannequin_Skeleton_AnimBlueprint2_C.Montage=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+UE4_Mannequin_Skeleton_AnimBlueprint_C.디폴트=True
+AnimStateTransitionNode.Transition=True
+AnimStateTransitionNode.BlendSettings=True
+AnimStateTransitionNode.Events=True
+AnimStateTransitionNode.Notifications=True
 
 [DetailMultiObjectNodeExpansion]
 GameMapsSettings=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2134,26 +2160,26 @@ bUseTreeViewForAnimationCurves=False
 AnimationCurveGroupingDelimiters="._/|\\"
 
 [ContentBrowserRecent]
-MRUItem0=/Game/SciFiCharacter/Animations/Reload_Pistol
-MRUItem1=/Game/SciFiCharacter/Animations/Prone_To_Stand
-MRUItem2=/Game/SciFiCharacter/Animations/Reload_Rifle_Ironsights
-MRUItem3=/Game/SciFiCharacter/Animations/Reload_Shotgun_Ironsights
-MRUItem4=/Game/SciFiCharacter/Animations/Prone_Death_1
-MRUItem5=/Game/SciFiCharacter/Animations/Jump_From_Stand
-MRUItem6=/Game/SciFiCharacter/Animations/Jump_From_Stand_Ironsights
-MRUItem7=/Game/SciFiCharacter/Animations/Hit_React_2
-MRUItem8=/Game/SciFiCharacter/Animations/Hit_React_3
-MRUItem9=/Game/SciFiCharacter/Animations/Equip_Rifle_Standing
-MRUItem10=/Game/SciFiCharacter/Animations/Death_3
-MRUItem11=/Game/SciFiCharacter/Animations/Death_2
-MRUItem12=/Game/SciFiCharacter/Animations/Death_1
-MRUItem13=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem14=/Game/WeaponSniper/Mesh/SkeletalMesh/SKM_Weapon_Sniper
-MRUItem15=/Game/SciFiCharacter/Animations/Idle_Rifle_Hip
-MRUItem16=/Game/SciFiCharacter/Animations/Idle_Rifle_Hip_Break1
-MRUItem17=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
-MRUItem18=/Game/ThirdPerson/Input/IMC_Default
-MRUItem19=/Game/ThirdPerson/Input/Actions/IA_Look
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem1=/Game/SciFiCharacter/Meshes/UE4_Mannequin_Skeleton_AnimBlueprint
+MRUItem2=/Game/SciFiCharacter/Animations/Idle_Rifle_Hip
+MRUItem3=/Game/SciFiCharacter/Animations/Aim_Space_Hip
+MRUItem4=/Game/SciFiCharacter/Animations/Aim_Space_Ironsights
+MRUItem5=/Game/SciFiCharacter/Animations/Reload_Pistol
+MRUItem6=/Game/SciFiCharacter/Animations/Prone_To_Stand
+MRUItem7=/Game/SciFiCharacter/Animations/Reload_Rifle_Ironsights
+MRUItem8=/Game/SciFiCharacter/Animations/Reload_Shotgun_Ironsights
+MRUItem9=/Game/SciFiCharacter/Animations/Prone_Death_1
+MRUItem10=/Game/SciFiCharacter/Animations/Jump_From_Stand
+MRUItem11=/Game/SciFiCharacter/Animations/Jump_From_Stand_Ironsights
+MRUItem12=/Game/SciFiCharacter/Animations/Hit_React_2
+MRUItem13=/Game/SciFiCharacter/Animations/Hit_React_3
+MRUItem14=/Game/SciFiCharacter/Animations/Equip_Rifle_Standing
+MRUItem15=/Game/SciFiCharacter/Animations/Death_3
+MRUItem16=/Game/SciFiCharacter/Animations/Death_2
+MRUItem17=/Game/SciFiCharacter/Animations/Death_1
+MRUItem18=/Game/WeaponSniper/Mesh/SkeletalMesh/SKM_Weapon_Sniper
+MRUItem19=/Game/SciFiCharacter/Animations/Idle_Rifle_Hip_Break1
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=1
@@ -2176,6 +2202,7 @@ MRUItem19=/Game/ThirdPerson/Input/Actions/IA_Look
 /Game/SciFiCharacter/Animations/Reload_Rifle_Ironsights.Reload_Rifle_Ironsights=1
 /Game/SciFiCharacter/Animations/Prone_To_Stand.Prone_To_Stand=1
 /Game/SciFiCharacter/Animations/Reload_Pistol.Reload_Pistol=1
+/Game/SciFiCharacter/Animations/Aim_Space_Hip.Aim_Space_Hip=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
