걷기까지 해놓기

--- a/ADR/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ADR/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -158,11 +158,11 @@ WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Fire.IA_Fire,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Look.IA_Look
 InputAction=
 CameraComponent=CameraComponent.PostProcess.Rendering Features,SkeletalMeshComponent.Materials.MaterialList
-SkeletalMeshComponent=CameraComponent.PostProcess.Rendering Features,SkeletalMeshComponent.Materials.MaterialList
+SkeletalMeshComponent=SkeletalMeshComponent.Materials.MaterialList,CameraComponent.PostProcess.Rendering Features
 BP_ThirdPersonCharacter_C=SkeletalMeshComponent.Materials.MaterialList,CameraComponent.PostProcess.Rendering Features
 K2Node=SkeletalMeshComponent.Materials.MaterialList
 K2Node_VariableGet=SkeletalMeshComponent.Materials.MaterialList
-CharacterMovementComponent=SkeletalMeshComponent.Materials.MaterialList
+CharacterMovementComponent=SkeletalMeshComponent.Materials.MaterialList,CameraComponent.PostProcess.Rendering Features
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Blueprints
@@ -219,7 +219,7 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
 GameMapsSettings="\"Object\" "
 MoviePlayerSettings="\"Object\" "
 GeneralProjectSettings="\"Object\" "
@@ -329,8 +329,8 @@ SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
-SceneComponent="\"Object\" \"Object.PostProcess.PostProcessSettings\" "
-ActorComponent="\"Object\" \"Object.PostProcess.PostProcessSettings\" "
+SceneComponent="\"Object\" "
+ActorComponent="\"Object\" \"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
 CameraComponent="\"Object\" \"Object.PostProcess.PostProcessSettings\" "
 SpringArmComponent="\"Object\" "
 InputAction="\"Object\" "
@@ -957,8 +957,7 @@ AnimStateTransitionNode.Notifications=True
 GameMapsSettings=True
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
+CleanShutdown=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
